# image_processing

./: .dockerignore  .gitignore  Dockerfile  app.py  build-image.sh  pyproject.toml  requirements.txt  shared.py  train.py
type_detection/: README.md  train.py
