[tool.poetry]
name = "imageclassification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "1.26.4"
pandas = "2.3.3"
pillow = "12.0.0"
scikit-learn = "1.7.2"
tensorflow = "2.15.0"
tensorflowjs = "4.17.0"
jax = "0.4.28"
jaxlib = "0.4.28"
rembg = "2.0.67"
onnxruntime = "^1.23.1"
Flask = "^3.1.2"
gunicorn = "^23.0.0"
flask-cors = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
